--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --import tsx ./node_modules/knex/bin/cli.js --knexfile ./knexfile.ts",
     "lint": "eslint src --ext .ts --fix",
+    "build": "tsup src",
     "test": "vitest"
-    
   },
   "keywords": [],
   "author": "",
@@ -17,12 +17,17 @@
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^20.11.0",
     "eslint": "^8.56.0",
+    "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.3.0",
+    "cookies": "^0.9.1",
+    "dotenv": "^16.3.1",
     "fastify": "^4.25.2",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "zod": "^3.22.4"
   }
 }
