--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^20.11.0",
+    "@types/supertest": "^6.0.2",
     "eslint": "^8.56.0",
+    "supertest": "^6.3.4",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
@@ -28,7 +30,6 @@
     "fastify": "^4.25.2",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7",
-    "supertest": "^6.3.4",
     "vitest": "^1.2.1",
     "zod": "^3.22.4"
   }
